--- a/public/index.html
+++ b/public/index.html
@@ -127,7 +127,7 @@
           <h2 class="text-yellow-300 text-2xl text-center mx-auto">LEARN</h2>
         </div>
         <div class="flex-grow sm:text-left text-center mt-6 sm:mt-0">
-          <p class="text-gray-900 text-justify font-body leading-loose">Understanding objectives and overarching goals 
+          <p class="text-gray-900 text-justify font-body leading-loose">Understanding the overarching goals 
             of each project are pivotal. They keep the process focused.
             Each client's problem is different. My approach synthesizes the subjectivity of the problem and then applies strategical objectivity.</p>
           <a class="mt-3 text-yellow-300 inline-flex items-center">
