--- a/public/work.html
+++ b/public/work.html
@@ -46,7 +46,7 @@
                 <div class="font-body font-extralight p-6">
                   <h2 class="tracking-widest text-xs title-font font-medium text-yellow-300 mb-1">EXPLORATORY DATA ANALYSIS</h2>
                   <h1 class="title-font text-lg font-body text-gray-900 mb-3">2020: State of the Stock Market</h1>
-                  <p class="leading-relaxed mb-3">Using R, I coded a R Markdown report that analyzed the market performance and identified market trends using Exchange-Traded Funds.</p>
+                  <p class="leading-relaxed mb-3">Using R, I coded a R Markdown report that analyzed the market performance and identified market trends Exchange-Traded Funds.</p>
                   <div class="flex items-center flex-wrap ">
                     <span class="text-gray-800 mr-3 inline-flex items-center lg:ml-auto md:ml-0 ml-auto leading-none text-sm pr-3 py-1 border-r-2 border-gray-200">
                       <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
