--- a/public/about.html
+++ b/public/about.html
@@ -51,9 +51,9 @@
                 <br>
                Let's solve a problem, find value, or build something meaningful together! <b>DM ME!</b>
             </p>
-            <!--<div class="flex justify-center">
-              <button class="inline-flex text-white bg-yellow-300 border-0 py-2 px-6 focus:outline-none rounded text-lg font-extralight">DM</button>
-            </div>-->
+            <div class="flex justify-center">
+              <a href="https://www.instagram.com/direct/inbox/" class="inline-flex animate-wiggle text-white bg-yellow-300 border-0 py-2 px-6 mt-6 focus:outline-none rounded">DM</a>
+            </div>
           </div>
         </div>
       </section>
