--- a/public/work.html
+++ b/public/work.html
@@ -69,7 +69,7 @@
                 <div class="font-body font-extralight p-6">
                   <h2 class="tracking-widest text-xs title-font font-body text-yellow-300 mb-1">EXPLORATORY DATA ANALYSIS</h2>
                   <h1 class="title-font text-lg font-body text-gray-900 mb-3">2020: Animal Shelter Analysis</h1>
-                  <p class="leading-relaxed mb-3">Using R, I wrangled City of Sacramento data to create a R Markdown report that identified how shelters were impacted in 2020.</p>
+                  <p class="leading-relaxed mb-3">Using R, I wrangled City of Sacramento data to create a Markdown report that identified how shelters were impacted in 2020.</p>
                   <div class="flex items-center flex-wrap">
                     <span class="text-gray-800 mr-3 inline-flex items-center lg:ml-auto md:ml-0 ml-auto leading-none text-sm pr-3 py-1 border-r-2 border-gray-200">
                       <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
