--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property='og:image' content='./images/Drew6.png'/>
     <link rel="stylesheet" href="styles.css"/>
     <link rel="icon" type="image/png" href="./images/Button1.png"/>
     <title>Drew</title>
