--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property='og:title' content='Drew'/>
-    <meta property='og:image' content='./images/Drew6.png'/>
+    <meta property='og:image' content='./images/BUtton1.png'/>
     <link rel="stylesheet" href="styles.css"/>
     <link rel="icon" type="image/png" href="./images/Button1.png"/>
     <title>Drew</title>
