--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
     <div class="container mx-auto px-5 py-24">
       <div class="flex flex-col text-center w-full mb-20">
         <h1 class="text-6xl uppercase mb-4 font-extrabold text-gray-900 hover:text-yellow-300">Skill Set</h1>
-        <p class="lg:w-2/3 mx-auto leading-relaxed font-body font-extralight">I don't know who you are. I don't know what you want. If you are looking for quick answers, I don't have that, but what I do have are a very particular set of skills</p>
+        <!--<p class="lg:w-2/3 mx-auto leading-relaxed font-body font-extralight">I don't know who you are. I don't know what you want. If you are looking for quick answers, I don't have that, but what I do have are a very particular set of skills</p>-->
       </div>
       <div class="flex flex-wrap -m-2">
         <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
@@ -130,9 +130,8 @@
           <h2 class="text-yellow-300 text-2xl text-center mx-auto">LEARN</h2>
         </div>
         <div class="flex-grow sm:text-left text-center mt-6 sm:mt-0">
-          <p class="text-gray-900 text-justify font-body leading-loose">Understanding the overarching goals 
-            of each project are pivotal. They keep the process focused.
-            Each client's problem is different. My approach synthesizes the subjectivity of the problem and then applies strategical objectivity.</p>
+          <p class="text-gray-900 text-justify font-body leading-loose">Each client's problem is different. I synthesize the 
+            subjectivity of the problem and then apply strategical objectivity.</p>
           <a class="mt-3 text-yellow-300 inline-flex items-center">
           </a>
         </div>
@@ -142,9 +141,7 @@
           <h2 class="text-yellow-300 text-2xl text-center mx-auto">THINK</h2>
         </div>
         <div class="flex-grow sm:text-left text-center mt-6 sm:mt-0">
-          <p class="text-gray-900 text-justify font-body leading-loose">Ideating is my strongsuit. My goal with each project is to derive insight or generate value for my clients. 
-            For this to occur, I have to think, operationally, creatively, and comprehensively. 
-            The hypotheses that I generate undergo levels of iterations so that I can fulfill the project goals.</p>
+          <p class="text-gray-900 text-justify font-body leading-loose">Brainstorming is my strongsuit. To think operationally, creatively, and comprehensively is my goal.</p>
           <a class="mt-3 text-yellow-300 inline-flex items-center">
           </a>
         </div>
@@ -154,10 +151,9 @@
           <h2 class="text-yellow-300 text-2xl text-center mx-auto">CREATE</h2>
         </div>
         <div class="flex-grow sm:text-left text-center mt-6 sm:mt-0">
-          <p class="text-gray-900 text-justify font-body leading-loose">To have usability and applicability, 
-            a product or service has to be easy to understand, functional, and distinctive. 
-            To ensure the project received a balanced mix of each component, 
-            I like to remain in close contact with each client so that each element is addressed holistically.</p>
+          <p class="text-gray-900 text-justify font-body leading-loose">I create with usability and applicability in mind—— a product or service has 
+            to be easy to understand, functional, and distinctive. 
+            </p>
           <a class="mt-3 text-yellow-300 inline-flex items-center">
           </a>
         </div>
