--- a/public/work.html
+++ b/public/work.html
@@ -88,7 +88,7 @@
             </div>
             <div class="p-4 md:w-1/3">
               <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
-                <a href="https://aramirez.netlify.app/"><img class="lg:h-48 md:h-36 w-full object-cover object-center" src="./images/Dec-4-Big Sur.jpg" alt="blog"></a>
+                <a href="https://dune.xyz/drewbyts/Web3-Overview/"><img class="lg:h-48 md:h-36 w-full object-cover object-center" src="./images/dune_analytics.png" alt="blog"></a>
                 <div class="font-body font-extralight p-6">
                   <h2 class="tracking-widest text-xs title-font font-body text-yellow-300 mb-1">WEB DEVELOPMENT</h2>
                   <h1 class="title-font text-lg font-body text-gray-900 mb-3">Portfolio</h1>
