--- a/public/work.html
+++ b/public/work.html
@@ -90,9 +90,9 @@
               <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
                 <a href="https://dune.xyz/drewbyts/Web3-Overview/"><img class="lg:h-48 md:h-36 w-full object-cover object-center" src="./images/dune_analytics.png" alt="blog"></a>
                 <div class="font-body font-extralight p-6">
-                  <h2 class="tracking-widest text-xs title-font font-body text-yellow-300 mb-1">WEB DEVELOPMENT</h2>
+                  <h2 class="tracking-widest text-xs title-font font-body text-yellow-300 mb-1">SQL and Data Visualization</h2>
                   <h1 class="title-font text-lg font-body text-gray-900 mb-3">Portfolio</h1>
-                  <p class="leading-relaxed mb-3">Using Gatsby, React, and Netlify, I developed a personal website to assist in highlighting my projects and personality.</p>
+                  <p class="leading-relaxed mb-3">Using @DuneAnalytics, I developed a web3 dashboard that gives an overview on Decentralized Exchanges, OpenSea, and NFTs.</p>
                   <div class="flex items-center flex-wrap ">
                     <span class="text-gray-800 mr-3 inline-flex items-center lg:ml-auto md:ml-0 ml-auto leading-none text-sm pr-3 py-1 border-r-2 border-gray-200">
                       <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
