--- a/public/work.html
+++ b/public/work.html
@@ -91,7 +91,7 @@
                 <a href="https://dune.xyz/drewbyts/Web3-Overview/"><img class="lg:h-48 md:h-36 w-full object-cover object-center" src="./images/dune_analytics.png" alt="blog"></a>
                 <div class="font-body font-extralight p-6">
                   <h2 class="tracking-widest text-xs title-font font-body text-yellow-300 mb-1">SQL and Data Visualization</h2>
-                  <h1 class="title-font text-lg font-body text-gray-900 mb-3">Portfolio</h1>
+                  <h1 class="title-font text-lg font-body text-gray-900 mb-3">Web3</h1>
                   <p class="leading-relaxed mb-3">Using @DuneAnalytics, I developed a web3 dashboard that gives an overview on Decentralized Exchanges, OpenSea, and NFTs.</p>
                   <div class="flex items-center flex-wrap ">
                     <span class="text-gray-800 mr-3 inline-flex items-center lg:ml-auto md:ml-0 ml-auto leading-none text-sm pr-3 py-1 border-r-2 border-gray-200">
