--- a/public/about.html
+++ b/public/about.html
@@ -28,7 +28,6 @@
     <div class="hidden md:block z-20" id="menu">
             <a href="index.html" class="font-body h-1/3 p-4">HOME</a>
             <a href="about.html" class="font-body animate-pulse h-1/3 p-4">ABOUT</a>
-            <a href="work.html" class="font-body h-1/3 p-4">WORK</a>
     </div> 
     </nav>
     <!--A Bit About Myself Copy (Row Version)-->
@@ -40,8 +39,8 @@
             <img class="" alt="hero" src="./images/Dec_07_2021_Drew.png">
           </div>
           <div class="lg:flex-grow md:w-2/5 lg:pl-24 md:pt-0 pt-12 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
-            <p class="leading-loose text-justify font-body"> 
-              I'm a business strategist with a background in Data Analysis, Marketing, Finance, and Programming. 
+            <p class="leading-loose font-body"> 
+              I'm a data analyst with a background in Data Analytics, Marketing, Finance, and Front End Web Development. 
               I love creating solutions that take (and find) the meaningful out of the meaningless.
                 <br>
                 <br>
@@ -52,42 +51,14 @@
                Let's solve a problem, find value, or build something meaningful together! <b>DM ME!</b>
             </p>
             <div class="flex justify-center">
-              <a href="https://www.instagram.com/direct/inbox/" class="inline-flex animate-wiggle text-white bg-yellow-300 border-0 py-2 px-6 mt-6 focus:outline-none rounded">DM</a>
+              <a href="https://www.instagram.com/direct/inbox/" class="inline-flex text-white bg-yellow-300 border-0 py-2 px-6 mt-6 focus:outline-none rounded">DM</a>
             </div>
           </div>
         </div>
-      </section>
-      <!--A Bit About Myself Top Down #1-->
-      <!--<section class="text-gray-600 bg-gray-100">
-        <div class="container mx-auto flex flex-col px-5 md:py-20 py-8 justify-center items-center">
-          <h1 class="sm:text-4xl text-3xl mb-4 font-body uppercase text-gray-900">A Bit About Myself</h1>
-          <img class="2xl:w-4/5 lg:w-4/6 md:w-3/6 w-7/8 mb-10 object-cover object-center" alt="hero" src="./images/Drew4.png">
-          <div class="center xl:py-16 lg:py-16 py-4">
-            <svg class="2xl:hidden lg:absolute md:bottom-0 bottom-0 w-12 h-12" fill="black" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
-          </div>
-          <div class="w-full md:w-2/3 flex flex-col mb-16 items-center text-center">
-            <p class="mb-8 leading-loose text-justify font-extralight text-gray-900 text-2xl"><b> HELLO</b>, my name is Drew or in some circles, Ray. 
-              I'm a business strategist with a knowledge base in Data Science, Marketing, Finance, and Programming. 
-              I love creating solutions that take (and find) the meaningful out of the meaningless.
-                <br>
-                <br>
-              Professional me aside, I'm active. I'm sarcastic. I'm everything my caricature represents.
-               
-                <br>
-                <br>
-               Let's solve a problem, find value, or build something meaningful together!
-            </p>
-              <div class="relative mr-4 lg:w-full xl:w-1/2 w-2/4 md:w-full text-left">
-                <label for="hero-field" class="center leading-7 text-sm mb-2 text-gray-600">What is your business or creative goal?</label>
-                <input type="text" id="hero-field" name="hero-field" class="w-full mb-4 bg-gray-100 bg-opacity-50 rounded focus:ring-2 focus:ring-indigo-200 focus:bg-transparent border border-gray-300 focus:border-indigo-500 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
-              </div>
-              <button class="inline-flex text-white bg-yellow-300 border-0 py-2 px-6 focus:outline-none hover:bg-black rounded text-lg">SHARE</button>
-            </div>
-          </div>
-          </div>
-      </section>-->
-      <!--Footer-->
-    <footer class="text-gray-600 border-t border-gray-200">
+      </section>   
+</body>
+    <!--Footer-->
+    <footer class="text-gray-600 border-t border-gray-200 bg-gray-100">
         <div class="container px-5 py-6 mx-auto flex items-center sm:flex-row flex-col">
           <a class="flex title-font font-body items-center md:justify-start justify-center text-gray-900">
             <span class="ml-3 text-xl">Drew</span>
@@ -96,7 +67,7 @@
             <a href="https://twitter.com/drewbyts" class="text-gray-600 ml-1" rel="noopener noreferrer" target="_blank">@drewbyts</a>
           </p>
           <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
-            <p class="text-gray-900 font-extralight"></p>
+            <p class="text-gray-600 font-extralight"></p>
             <a  href="https://twitter.com/drewbyts" class="ml-3 text-blue-400">
               <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
                 <path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"></path>
@@ -112,5 +83,4 @@
         </div>
     </footer>
 <script src="app.js"></script>
-</body>
 </html>
