--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,13 @@
     <title>Drew</title>
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
 </head>
+    
 <body>
-    <nav role ="navigation" 
-    class="flex justify-between items-center h-16 bg-gray-100 text-gray-800">
-       <a href="index.html" class="pl-6">
+  <header>
+    <div role ="navigation" class="flex justify-between items-center h-16 bg-gray-100 text-gray-800">
+       <a href="index.html">
        </a>
-       <div class="px-4 cursor-pointer md:hidden" id="bars">
+      <div class="px-4 cursor-pointer md:hidden" id="bars">
         <svg class="w-8 h-8" 
         fill="none" 
         stroke="currentColor" 
@@ -27,37 +28,34 @@
         stroke-width="2" 
         d="M4 6h16M4 12h16M4 18h16"
         ></path>
-    </svg>
-       </div> 
-        <div class="hidden md:block z-20" id="menu">
-            <a href="index.html" class="font-body animate-pulse h-1/3 p-4">HOME</a>
-            <a href="about.html" class="font-body h-1/3 p-4">ABOUT</a>
-            <a href="work.html" class="font-body h-1/3 p-4">WORK</a>
-        </div> 
-    </nav>
-<!-- Main Display #1 -->
-  <section class="bg-gray-100 h-screen bg-center bg-cover">
-  <div class="container mx-auto h-screen w-full flex flex-col lg:px-2 px-0 py-18 lg:py-36 2xl:py-64 justify-center items-center">
-      <h1 class="text-8xl text-center font-extrabold text-gray-800 uppercase mb-6">Drew</h1>
-      <figure class="rounded-full bg-yellow-300 flex md:flex p-2  mb-6">
+        </svg>
+      </div> 
+      <div class="hidden md:block z-20" id="menu">
+        <a href="index.html" class="font-body animate-pulse h-1/3 p-4">HOME</a>
+        <a href="about.html" class="font-body h-1/3 p-4">ABOUT</a>
+      </div> 
+    </div>
+  </header>
+  <!--Hero Section -->
+  <section class="w-full h-screen flex flex-col 2xl:py-64 justify-center items-center bg-gray-100 bg-center bg-cover">
+      <h1 class="text-8xl font-extrabold text-gray-800 hover:text-yellow-300 uppercase mb-6">Drew</h1>
+      <figure class="rounded-full bg-yellow-300 flex p-2 mb-6">
           <a href="about.html"><img class="w-46 h-52 md:w-64 md:h-auto mx-auto" src="./images/Button1.png"></img>
           </a>
-        </figure>
+      </figure>
       <h3 class="text-3xl text-center font-body text-gray-800 uppercase">Analytical Business Strategist</h3>
-      <!--<p class="text-sm font-body pb-12 lg:pb-20">(FOR CREATORS)</p>-->
-        <div class="center lg:py-16 py-0">
-          <svg class="lg:absolute md:bottom-0 bottom-0 w-12 h-12" fill="black" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+        <div class="lg:py-16">
+          <svg class="w-12 h-12" fill="black" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path>
           </svg>
         </div>
-  </div>
   </section>
-  <!--Skill Set-->
+  <!--Skill Set Section-->
   <section class="text-gray-800 bg-gray-50">
-    <div class="container mx-auto px-5 py-24">
-      <div class="flex flex-col text-center w-full mb-20">
-        <h1 class="text-6xl uppercase mb-4 font-extrabold text-gray-900 hover:text-yellow-300">Skill Set</h1>
-        <!--<p class="lg:w-2/3 mx-auto leading-relaxed font-body font-extralight">I don't know who you are. I don't know what you want. If you are looking for quick answers, I don't have that, but what I do have are a very particular set of skills</p>-->
+    <div class="container mx-auto px-5 py-12">
+      <div class="text-center mb-8">
+        <h1 class="text-6xl uppercase font-extrabold text-gray-900 hover:text-yellow-300">Skill Set</h1>
+        <!--<p class="lg:w-2/3 mx-auto leading-relaxed font-body font-extralight">lorem psum</p>-->
       </div>
       <div class="flex flex-wrap -m-2">
         <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
@@ -117,66 +115,90 @@
       </div>
     </div>
   </section>
-  <!--Work Flow-->
-  <section class="text-gray-800 bg-gray-100">
-    <div class="container px-5 py-24 mx-auto">
-      <div class="flex flex-col text-center w-full mb-12">
-        <h1 class="text-6xl font-extrabold text-gray-900 uppercase hover:text-yellow-300">work flow</h1>
-        <p class="max-w-2xl text-md text-gray-400 lg:mx-auto">
-       </p>
-    </div>
-      <div class="flex items-center lg:w-3/5 mx-auto border-b pb-10 mb-4 border-gray-200 sm:flex-row flex-col">
-        <div class="sm:w-28 sm:h-16 h-16 w-28 sm:mr-10 inline-flex items-center justify-center flex-shrink-0">
-          <h2 class="text-yellow-300 text-2xl text-center mx-auto">LEARN</h2>
-        </div>
-        <div class="flex-grow sm:text-left text-center mt-6 sm:mt-0">
-          <p class="text-gray-900 text-justify font-body leading-loose">Each client's problem is different. I synthesize the 
-            subjectivity of the problem and then apply strategical objectivity.</p>
-          <a class="mt-3 text-yellow-300 inline-flex items-center">
-          </a>
-        </div>
+<!--Work Section-->
+  <section class="bg-gray-100 bg-center text-gray-800">
+    <div class="container mx-auto px-5 py-12">
+      <div class="flex flex-col text-center mb-8">
+        <h1 class="text-6xl uppercase mb-4 font-extrabold text-gray-900 hover:text-yellow-300">Work</h1>
       </div>
-      <div class="flex items-center lg:w-3/5 mx-auto border-b pb-10 mb-4 border-gray-200 sm:flex-row flex-col">
-        <div class="sm:w-28 sm:h-16 h-16 w-28 sm:mr-10 inline-flex items-center justify-center  flex-shrink-0">
-          <h2 class="text-yellow-300 text-2xl text-center mx-auto">THINK</h2>
-        </div>
-        <div class="flex-grow sm:text-left text-center mt-6 sm:mt-0">
-          <p class="text-gray-900 text-justify font-body leading-loose">Brainstorming is my strongsuit. To think operationally, creatively, and comprehensively is my goal.</p>
-          <a class="mt-3 text-yellow-300 inline-flex items-center">
-          </a>
-        </div>
-      </div>
-      <div class="flex items-center lg:w-3/5 mx-auto sm:flex-row flex-col">
-        <div class="sm:w-28 sm:h-16 h-16 w-28 sm:mr-10 inline-flex items-center justify-center flex-shrink-0">
-          <h2 class="text-yellow-300 text-2xl text-center mx-auto">CREATE</h2>
-        </div>
-        <div class="flex-grow sm:text-left text-center mt-6 sm:mt-0">
-          <p class="text-gray-900 text-justify font-body leading-loose">I create with usability and applicability in mind—— a product or service has 
-            to be easy to understand, functional, and distinctive. 
-            </p>
-          <a class="mt-3 text-yellow-300 inline-flex items-center">
-          </a>
-        </div>
-      </div>
-    </div>
-  </section>    
-  <!--Footer
-  <div class="bg-no-repeat h-5/6 bg-center bg-cover mb-20" style="background-color:white">
-        <div class="container px-5 py-24 mx-auto">
-          <div class="bg-cover bg-center h-auto rounded-lg text-white py-12 px-6 object-fill" style="background-image: url(./images/toa-heftiba-0rlfiRSdVzU-unsplash.jpg)">
-         <div class="md:my-8 lg:my-8 pb-6 mx-auto text-center">
-          <p class="sm:text-6xl md:text-8xl text-6xl uppercase font-body text-yellow-300 hover:text-white mb-10">Are You a Creator? </p>
-          <a href="#" class="py-2 px-4 bg-yellow-300 text-gray-900 font-body text-lg rounded hover:bg-gray-200 hover:text-gray-800">Learn</a>
-          </div>  
+      <div class="relative flex flex-wrap h-full -m-4 items-center justify-center">
+        <div class="p-4 md:w-1/3">
+          <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
+            <a href="https://drewbyts.github.io/Market-Analysis/"><img class="lg:h-48 md:h-36 w-full object-cover object-center" src="./images/GamingYellow.jpg" alt="blog"></a>
+            <div class="font-body font-extralight p-6">
+              <h2 class="tracking-widest text-xs title-font font-medium text-yellow-300 mb-1">R: Markdown and Tidyverse</h2>
+              <h1 class="title-font text-lg font-body text-gray-900 mb-3">2020: State of the Stock Market</h1>
+              <p class="leading-relaxed mb-3">Using R, I coded a R Markdown report that analyzed market performance and identified market trends through Standard and Poor's ETFs.</p>
+              <div class="flex items-center flex-wrap ">
+                <span class="text-gray-800 mr-3 inline-flex items-center lg:ml-auto md:ml-0 ml-auto leading-none text-sm pr-3 py-1 border-r-2 border-gray-200">
+                  <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
+                    <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
+                    <circle cx="12" cy="12" r="3"></circle>
+                  </svg>200
+                </span>
+                <span class="text-gray-800 inline-flex items-center leading-none text-sm">
+                  <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
+                    <path d="M21 11.5a8.38 8.38 0 01-.9 3.8 8.5 8.5 0 01-7.6 4.7 8.38 8.38 0 01-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 01-.9-3.8 8.5 8.5 0 014.7-7.6 8.38 8.38 0 013.8-.9h.5a8.48 8.48 0 018 8v.5z"></path>
+                  </svg>0
+                </span>
+              </div>
+            </div>
           </div>
         </div>
+        <div class="p-4 md:w-1/3">
+          <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
+            <a href="https://drewbyts.github.io/Shelter-Analysis/"><img class="lg:h-48 md:h-36 w-full object-cover object-center" src="./images/PetsYellow.jpg" alt="blog"></a>
+            <div class="font-body font-extralight p-6">
+              <h2 class="tracking-widest text-xs title-font font-body text-yellow-300 mb-1">Python: Pandas, Matplotlib, and Seaborn</h2>
+              <h1 class="title-font text-lg font-body text-gray-900 mb-3">Sample Order Analysis</h1>
+              <p class="leading-relaxed mb-3">Using Jupyter Notebook, I wrangled and visualized order data. The project involved a Cohort Analysis, churn/retention calculations, and a Customer Lifetime Value Analysis.</p>
+              <div class="flex items-center flex-wrap">
+                <span class="text-gray-800 mr-3 inline-flex items-center lg:ml-auto md:ml-0 ml-auto leading-none text-sm pr-3 py-1 border-r-2 border-gray-200">
+                  <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
+                    <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
+                    <circle cx="12" cy="12" r="3"></circle>
+                  </svg>162
+                </span>
+                <span class="text-gray-800 inline-flex items-center leading-none text-sm">
+                  <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
+                    <path d="M21 11.5a8.38 8.38 0 01-.9 3.8 8.5 8.5 0 01-7.6 4.7 8.38 8.38 0 01-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 01-.9-3.8 8.5 8.5 0 014.7-7.6 8.38 8.38 0 013.8-.9h.5a8.48 8.48 0 018 8v.5z"></path>
+                  </svg>0
+                </span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="p-4 md:w-1/3">
+          <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
+            <a href="https://dune.xyz/browse/dashboards/authored"><img class="lg:h-48 md:h-36 w-full object-cover object-center" src="./images/dune_analytics.png" alt="blog"></a>
+            <div class="font-body font-extralight p-6">
+              <h2 class="tracking-widest text-xs title-font font-body text-yellow-300 mb-1">SQL</h2>
+              <h1 class="title-font text-lg font-body text-gray-900 mb-3">Web3 Dashboards</h1>
+              <p class="leading-relaxed mb-3">Through @DuneAnalytics, I used SQL to develop two web3 dashboards. The dashboards provide an overview of Decentralized Exchanges, OpenSea, and a collection of NFTs.</p>
+              <div class="flex items-center flex-wrap ">
+                <span class="text-gray-800 mr-3 inline-flex items-center lg:ml-auto md:ml-0 ml-auto leading-none text-sm pr-3 py-1 border-r-2 border-gray-200">
+                  <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
+                    <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
+                    <circle cx="12" cy="12" r="3"></circle>
+                  </svg>201
+                </span>
+                <span class="text-gray-800 inline-flex items-center leading-none text-sm">
+                  <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
+                    <path d="M21 11.5a8.38 8.38 0 01-.9 3.8 8.5 8.5 0 01-7.6 4.7 8.38 8.38 0 01-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 01-.9-3.8 8.5 8.5 0 014.7-7.6 8.38 8.38 0 013.8-.9h.5a8.48 8.48 0 018 8v.5z"></path>
+                  </svg>0
+                </span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-  -->
-    <footer class="text-gray-600 border-t border-gray-100">
+</section>   
+  <!--Footer-->
+  <footer class="text-gray-600 border-t border-gray-200 bg-gray-100">
           <div class="container px-5 py-6 mx-auto flex items-center sm:flex-row flex-col">
             <a class="flex title-font font-body items-center md:justify-start justify-center text-gray-900">
-              <!--SVG Icon Placeholder-->
-              <span class="ml-3 text-xl font-body">Drew</span>
+              <span class="ml-3 text-xl">Drew</span>
             </a>
             <p class="text-sm text-gray-500 font-body sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4">© 2021 —
               <a href="https://twitter.com/drewbyts" class="text-gray-600 font-body ml-1" rel="noopener noreferrer" target="_blank">@drewbyts</a>
@@ -196,7 +218,7 @@
               </a>
             </span>
           </div>
-      </footer>
-<script src = "app.js"></script>
+  </footer>
 </body>
+<script src ="app.js"></script>
 </html>
