--- a/public/about.html
+++ b/public/about.html
@@ -48,10 +48,10 @@
                
                 <br>
                 <br>
-               Let's solve a problem, find value, or build something meaningful together! <b>DM ME!</b>
+               Let's solve a problem, find value, or build something meaningful together!
             </p>
             <div class="flex justify-center">
-              <a href="https://www.instagram.com/direct/inbox/" class="inline-flex text-white bg-yellow-300 border-0 py-2 px-6 mt-6 focus:outline-none rounded">DM</a>
+              <a href = "mailto: drewbyts@gmail.com" class="inline-flex text-white bg-yellow-300 border-0 py-2 px-6 mt-6 focus:outline-none rounded">Email</a>
             </div>
           </div>
         </div>
