--- a/public/index.html
+++ b/public/index.html
@@ -116,7 +116,7 @@
     </div>
   </section>
 <!--Work Section-->
-  <section class="bg-gray-100 bg-center text-gray-800">
+  <section class="h-screen bg-gray-100 bg-center text-gray-800">
     <div class="container mx-auto px-5 py-12">
       <div class="flex flex-col text-center mb-8">
         <h1 class="text-6xl uppercase mb-4 font-extrabold text-gray-900 hover:text-yellow-300">Work</h1>
@@ -124,7 +124,7 @@
       <div class="relative flex flex-wrap h-full -m-4 items-center justify-center">
         <div class="p-4 md:w-1/3">
           <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
-            <a href="https://drewbyts.github.io/Market-Analysis/"><img class="lg:h-48 md:h-36 w-full object-cover object-center" src="./images/GamingYellow.jpg" alt="blog"></a>
+            <a href="https://drewbyts.github.io/Market-Analysis/"><img class="lg:h-48 md:h-36 w-full object-cover object-center" src="https://images.unsplash.com/photo-1444653614773-995cb1ef9efa?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1776&q=80" alt="blog"></a>
             <div class="font-body font-extralight p-6">
               <h2 class="tracking-widest text-xs title-font font-medium text-yellow-300 mb-1">R: Markdown and Tidyverse</h2>
               <h1 class="title-font text-lg font-body text-gray-900 mb-3">2020: State of the Stock Market</h1>
@@ -147,7 +147,7 @@
         </div>
         <div class="p-4 md:w-1/3">
           <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
-            <a href="https://drewbyts.github.io/Shelter-Analysis/"><img class="lg:h-48 md:h-36 w-full object-cover object-center" src="./images/PetsYellow.jpg" alt="blog"></a>
+            <a href="https://github.com/drewbyts/Order-Analysis"><img class="lg:h-48 md:h-36 w-full object-cover object-center" src="https://images.unsplash.com/photo-1556742044-3c52d6e88c62?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80" alt="blog"></a>
             <div class="font-body font-extralight p-6">
               <h2 class="tracking-widest text-xs title-font font-body text-yellow-300 mb-1">Python: Pandas, Matplotlib, and Seaborn</h2>
               <h1 class="title-font text-lg font-body text-gray-900 mb-3">Sample Order Analysis</h1>
