--- a/public/index.html
+++ b/public/index.html
@@ -172,7 +172,7 @@
         </div>
         <div class="p-4 md:w-1/3">
           <div class="h-1/2 border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
-            <a href="https://dune.xyz/browse/dashboards/authored"><img class="lg:h-48 md:h-36 w-full object-cover object-center" src="./images/dune_analytics.png" alt="blog"></a>
+            <a href="https://dune.xyz/drewbyts/"><img class="lg:h-48 md:h-36 w-full object-cover object-center" src="./images/dune_analytics.png" alt="blog"></a>
             <div class="font-body font-extralight p-6">
               <h2 class="tracking-widest text-xs title-font font-body text-yellow-300 mb-1">SQL</h2>
               <h1 class="title-font text-lg font-body text-gray-900 mb-3">Web3 Dashboards</h1>
