--- a/public/index.html
+++ b/public/index.html
@@ -124,7 +124,7 @@
         </div>
         <div class="p-4 md:w-1/3">
           <div class="h-1/2 border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
-            <a href="https://github.com/drewbyts/Order-Analysis"><img class="lg:h-48 md:h-36 w-full object-cover object-center" src="https://images.unsplash.com/photo-1556742044-3c52d6e88c62?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80" alt="blog"></a>
+            <a href="https://public.tableau.com/views/FantasyFootballInsights2019-2021_16566917760970/FantasyOppEfficiency?:language=en-US&publish=yes&:display_count=n&:origin=viz_share_link"><img class="lg:h-48 md:h-36 w-full object-cover object-center" src="https://images.unsplash.com/photo-1556742044-3c52d6e88c62?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80" alt="blog"></a>
             <div class="font-body font-extralight p-6">
               <h2 class="tracking-widest text-xs title-font font-body text-yellow-300 mb-1">Tableau and R</h2>
               <h1 class="title-font text-lg font-body text-gray-900 mb-3">Fantasy Football Insights</h1>
